# imha

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/action/venv-install/: action.yml
.github/workflows/: pre-commit-checks.yml  release.yml  tests-checks.yml
src/imha/: __init__.py
tests/: conftest.py  smoke_test.py  test_hash_functions.py  test_hash_is_constant.py  test_hash_matches_imagehash.py  test_hash_object.py
